--- a/css/styles.css
+++ b/css/styles.css
@@ -8,3 +8,29 @@ html, body {
     color: #303137;
     margin: 0;
 }
+
+nav.navBar {
+    display: flex;
+    padding: 10px;
+}
+
+.brand, .navLink {
+    text-transform: uppercase;
+    color: #303137;
+}
+
+.brand span {
+    color: red;
+}
+
+ul.navBarList {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+}
+
+.navLink {
+    text-decoration: none;
+    padding-left: 2rem;
+}
