--- a/css/styles.css
+++ b/css/styles.css
@@ -9,19 +9,20 @@ html, body {
     margin: 0;
 }
 
-nav.navBar {
+.navBar {
     display: flex;
     padding: 10px;
     max-width: 1140px;
     width: 100%;
     margin: 0 auto;
+
     justify-content: space-between;
 }
 
 .brand, .navLink, a {
     text-transform: uppercase;
     color: #303137;
-
+    margin-right: 15px;
 }
 
 .brand {
@@ -33,15 +34,55 @@ nav.navBar {
 }
 
 
-ul.navBarList {
+ul.topnav {
     list-style: none;
     margin: 0;
     padding: 0;
     display: flex;
 }
 
-.navBarList, .navLink, a {
+.topnav, .navLink, a {
     text-decoration: none;
     padding-left: 2rem;
     font-size: 20px;
+}
+
+.dropdownLink {
+    display: none;
+}
+
+@media (max-width: 768px) {
+    ul.topnav li a.navLink {
+        display: none;
+    }
+
+    ul.topnav li.dropdownLink {
+        display: block;
+        position: absolute;
+        top: 10px;
+        right: 20px;
+    }
+
+    ul.topnav.responsive li.dropdownLink {
+        position: absolute;
+        top: 10px;
+        right: 20px;
+    }
+
+    ul.topnav.responsive {
+        flex-direction: column;
+        text-align: right;
+    }
+
+    ul.topnav.responsive li {
+        position: relative;
+        top: 30px;
+        right: 30px;
+    }
+
+    ul.topnav.responsive li a.navLink {
+        display: block;
+        line-height: 2em;
+    }
+
 }
