--- a/css/styles.css
+++ b/css/styles.css
@@ -9,13 +9,14 @@ html, body {
     margin: 0;
 }
 
+/* NAVBAR ELEMENTS */
+
 .navBar {
     display: flex;
     padding: 10px;
     max-width: 1140px;
     width: 100%;
     margin: 0 auto;
-
     justify-content: space-between;
 }
 
@@ -33,7 +34,6 @@ html, body {
     color: red;
 }
 
-
 ul.topnav {
     list-style: none;
     margin: 0;
@@ -50,6 +50,8 @@ ul.topnav {
 .dropdownLink {
     display: none;
 }
+
+
 
 @media (max-width: 768px) {
     ul.topnav li a.navLink {
@@ -84,5 +86,4 @@ ul.topnav {
         display: block;
         line-height: 2em;
     }
-
 }
