--- a/css/styles.css
+++ b/css/styles.css
@@ -145,6 +145,45 @@ header {
     box-shadow: 0 5px 20px rgba(0, 0, 0, 0.3);
 }
 
+.quoteBtn:hover {
+    cursor: pointer;
+}
+
+/* SECTION: portfolio */
+.sectionHeader {
+    text-align: center;
+    padding: 6rem 0 4rem;
+}
+
+.portfolioWrapper {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.portfolioObject {
+    max-width: 250px;
+    margin: 1rem 0;
+    padding: 1rem;
+}
+
+  .portfolioHeader {
+    text-align: center;
+}
+
+.portfolioBox {
+    width: 250px;
+    height: 250px;
+    background-color: #f1f3fa;
+    transition: .2s ease-in-out;
+}
+
+.portfolioBox:hover {
+    cursor: pointer;
+    transform: scale(1.05);
+}
+
+/* MEDIA QUERY */
 @media (max-width: 768px) {
     ul.topnav li a.navLink {
         display: none;
@@ -183,5 +222,31 @@ header {
         color: #646b90;
         font-size: 14px;
         line-height: 1.5em;
+    }
+
+    .mediaObject {
+        text-align: center;
+        flex-direction: column;
+    }
+
+    .iconWrapperLeft,
+    .iconWrapperRight {
+        order: 1;
+    }
+
+    .blurbWrapperLeft,
+    .blurbWrapperRight {
+        order: 2;
+        padding-top: 2rem;
+    }
+
+    .portfolioWrapper {
+        text-align: center;
+    }
+}
+
+@media (max-width: 500px) {
+    .portfolioWrapper {
+        justify-content: center;
     }
 }
